--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cocaine-core (0.9.9) unstable; urgency=low
+
+  * Added missing header files in installation
+
+ -- Evgeniy Polyakov <zbr@ioremap.net>  Mon, 10 Dec 2012 20:49:41 +0400
+
 cocaine-core (0.9.8) lucid; urgency=low
 
   * Binding announce socket instead of connecting it
